--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,27 @@
-
+# Use postgres/example user/password credentials
+version: '3.1'
 
 services:
-  tpadds2024:
-    build: .
-    ports:
-      - "9001:9001"
-    environment:
-      DB_URL: jdbc:mysql://tpa_db:3306/dds_grupo9?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC"
-      DB_USER_NAME: root
-      DB_PASSWORD: 1234
+
+  dbservice:
+    image: postgres
     restart: always
+    environment:
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: dblibros
+    volumes:
+      - ./posgresdb:/var/lib/postgresql/data
+
+  app:
+    image: ddsdeploy
+    restart: always
+    ports:
+      - 8080:8080
+    environment:
+      hibernate__hbm2ddl__auto: create
+      javax__persistence__jdbc__driver: org.postgresql.Driver
+      javax__persistence__jdbc__password: 123
+      javax__persistence__jdbc__url: jdbc:postgresql://dbservice/dblibros
+      javax__persistence__jdbc__user: postgres
     depends_on:
-      tpa_db:
-        condition: service_healthy
-  tpa_db:
-    image: mysql:8.0.17
-    ports:
-      - "3307:3306"
-    environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_PASSWORD: 1234
-      MYSQL_DATABASE: dds_grupo9
-    restart: always
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      timeout: 10s
-      retries: 10
+      - dbservice
