--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
           </descriptorRefs>
+          <attach>false</attach>
         </configuration>
         <executions>
           <execution>
